package model;

public class AntiChewEffect extends InsectEffect {

    @Override
    public void applyTo(Insect insect) {
    }

    @Override
    public void remove() {
    }
}