package model;

public class ParalysingEffect extends InsectEffect {

    @Override
    public void applyTo(Insect insect) {
    }

    @Override
    public void remove() {
    }
}