package model;

public class SpeedEffect extends InsectEffect {
    private double multiplier;

    @Override
    public void applyTo(Insect insect) {
    }

    @Override
    public void remove() {
    }
}