@startuml InsectEffect/classes

abstract InsectEffect {
    timeLeft
    {abstract} applyTo(Insect)
    {abstract} remove()
    {static} createEffect() : InsectEffect
}

class SpeedEffect {
    multiplier
    applyTo(Insect)
    remove()
}
class ParalysingEffect{
    applyTo(Insect)
    remove()
}
class AntiChewEffect{
    applyTo(Insect)
    remove()
}


InsectEffect <|-- SpeedEffect
InsectEffect <|-- ParalysingEffect
InsectEffect <|-- AntiChewEffect